Upgrade dompurify to 3.2.4

--- a/web-app/package.json
+++ b/web-app/package.json
@@ -78,7 +78,6 @@
     "@types/webpack-env": "^1.18.5",
     "babel-plugin-istanbul": "^6.1.1",
     "customize-cra": "^1.0.0",
-    "dompurify": "^3.2.4",
     "knip": "^5.27.2",
     "minio": "^8.0.1",
     "nyc": "^15.1.0",
@@ -97,7 +96,8 @@
     "semver": "^7.5.2",
     "ws": "^8.17.1",
     "rollup": "^4.24.0",
-    "cookie": "^0.7.2"
+    "cookie": "^0.7.2",
+    "jspdf": "^3.0.0"
   },
   "main": "index.js",
   "packageManager": "yarn@4.4.0"
